Bug 556052. Compute mViewToWidgetOffset correctly and fix bugs by adding subpixel translation when painting. r=mats